# simpeg_ecosys

./: README.md  environment.yml  environment_dev.yml  pyproject.toml  requirements.txt  requirements_dev.txt
simpeg_ecosys/mathematical/: poisson.py
