[tool.poetry]
name = "simpeg_ecosys"
version = "0.1.0"
description = ""
authors = ["Zheng-Kai Ye <supon3060@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
scipy = "^1.6.0"
discretize = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pycodestyle = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
